# nominate-gitee-RonxBulld-ftrpc

./: .gitignore  CMakeLists.txt  GenCPP.cpp  GenCPP.h  GenTS.cpp  GenTS.h  GenUtils.cpp  GenUtils.h  Notification.txt  README.md  TypeDef.h  ast_tree.h  caller.tpl  ftrpc_grammer.g4  json_export.h  keywords.h  lex.cpp  lex.h  main.cpp  parser.cpp  parser.h  provider.tpl  symman.cpp  symman.h
sample/: test.idl
template/cpp/: caller.tpl  caller.tpl.cpp  provider.tpl  provider.tpl.cpp
template/typescript/: caller.tpl.js  caller.tpl.ts  provider.tpl.js  provider.tpl.ts
test/: caller.cpp  provider.cpp
